# aoc2024

./: .gitignore  README.md
day01/: Day01.hs
day02/: Day02.hs
day03/: Day03.hs
day04/: Day04.hs
day05/: Day05.hs
day06/: Day06.hs
day07/: Day07.hs
day08/: Day08.hs
day09/: Day09.hs
day10/: Day10.hs
day11/: Day11.hs
day12/: Day12.hs
day13/: Day13.hs  test_input_2.txt
day14/: Day14.hs
day15/: Day15.hs  test_input_3.txt
day16/: Day16.hs  sample_1.txt  sample_2.txt  sample_3.txt
day17/: Day17.hs
day18/: Day18.hs
day19/: Day19.hs  day19.cabal
day20/: Day20.hs
