cabal-version:      3.0
name:               day19
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options:      -Wall

executable day19
    hs-source-dirs:   .
    main-is:          Day19.hs
    build-depends:    base ^>=4.17.2.1,
                      memoize ^>=1.1.2
    default-language: Haskell2010
